[edit] Resolve rending issues with curly braces in MATH1800 review

--- a/_posts/course-reviews/2023-08-28-math1800.md
+++ b/_posts/course-reviews/2023-08-28-math1800.md
@@ -41,7 +41,14 @@ The review is split into 2 main parts:
 
 # Course Description (LONG) with Commentary:  
 
-The course begins with an introduction to sets which may or may not be a review and is probably reviewed again in Calculus for general math students (at least it was when I was studying Computer Science). Sets as you probably already know is a collection of objects where the objects are called elements or members of the set. It's similar to an array in programming where members in the array are called elements. However, the difference is that elements in the sets are unique while in an array, they are not. Similarly to how an empty array in C is denoted as `{}` and empty set in Mathematics is denoted as  $\emptyset = {}$. Another parallel to programming is how `{{}}` is not the same as `{}`. In baby set theory, $\emptyset$ and ${\emptyset}$ are not the same as ${\emptyset}$ has one element while $\emptyset$ has no elements in the set. Various basic set notations are introduced such as what the following means: $\in, \notin, \subset$. In addition to covering set notations, the course also covers common sets in Mathematics such as the irrational and rational sets.
+The course begins with an introduction to sets which may or may not be a review and is probably reviewed again in Calculus for general math 
+students (at least it was when I was studying Computer Science). 
+Sets as you probably already know is a collection of objects where the objects are called elements or members of the set. 
+It's similar to an array in programming where members in the array are called elements. 
+However, the difference is that elements in the sets are unique while in an array, they are not. 
+Similarly to how an empty array in C is denoted as `{}` and empty set in Mathematics is denoted as  $\emptyset = \\{\\}$. 
+Another parallel to programming is how `{ {} }` is not the same as `{}`. 
+In baby set theory, $\emptyset$ and $\\{\emptyset\\}$ are not the same as $\\{\emptyset\\}$ has one element while $\emptyset$ has no elements in the set. Various basic set notations are introduced such as what the following means: $\in, \notin, \subset$. In addition to covering set notations, the course also covers common sets in Mathematics such as the irrational and rational sets.
 
 Something new in the first topic is the idea of cardinality, denoted as $\|S\|$ is the number of elements in a set. A new set inroduced to students is the power set:
 
