[post] Implicit this

--- a/_posts/programming/2025-01-24-view-vim.md
+++ b/_posts/programming/2025-01-24-view-vim.md
@@ -5,9 +5,11 @@ description: A Look into the many faces of vim
 categories: [programming, vi, utilities, unix]
 ---
 
-> **Note:** This is a follow up post from my [microblog](https://randombits.neocities.org/micro/2025/01/vim-view)
 
 I recently found out accidentally at work that `vim` and `view` were the same thing when I happened to be editing a file on `view` instead of my beloved `vim` editor.
+
+> **Note:** This is a follow up post from my [microblog](https://randombits.neocities.org/micro/2025/01/vim-view)
+
 For context, `view` is often used in lieu of `vi` when trying to open a file for read only while retaining the same shortcuts as `vi`. This is why it surprised me 
 to see that I could modify a file when `view` was supposed to be read only. If we were to take a look at the documentation:
 
@@ -139,7 +141,7 @@ Compilation : gcc -c -I. -Iproto -DHAVE_CONFIG_H -O2 -flto=auto -ffat-lto-object
 
 5.) `vi` packaged on a QNX virtual target is called [`elvis`](https://en.wikipedia.org/wiki/Elvis_(text_editor)), an enhanced clone of `vi`. QNX probably ships `elvis` 
 as the default editor due to its small size compared to `vim` (though this also means less features compared to `vim`). The QNX Raspberry Pi 4 image though ships with 
-regular `vim`.
+regular `vim`. Similarly to `vim`, renaming `elvis` to `view` will open the editor in read only mode.
 
 ```
 # vi --version
