Fix language markdown setting

--- a/_posts/programming/2020-10-15-scanset.md
+++ b/_posts/programming/2020-10-15-scanset.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Another Look at scanf - scanset
-categories: [programming, c/c++]
+categories: [programming, c/c++, scanf]
 ---
 
 It came to my attention from an embedded course on [udemy](https://www.udemy.com/course/microcontroller-embedded-c-programming/) the existence of **scanset** in `scanf`
@@ -19,7 +19,7 @@ If you wish to stop reading the input upon reading some character in a set, you 
 
 ## Benefits
 To put it simply, this saves you the trouble of writing code to process from the input the desired string you wish to look at. To extract information from a string not delimited by whitespace such as CSV, you would have to look through `strtok`. However, with **scanset**, you can extract the data from a CSV with one scanf call. For instance, let's say we want to parse a CSV with the format `first_name, last_name, age`. The code to scan a CSV would look something like this:
-```
+```c
 scanf("%[^,],%[^,],%d\n", fname, lname, &age);
 ```
 
