Update Links to codeberg or use relative paths

--- a/_posts/micro/2025-02-23-2025-edition.md
+++ b/_posts/micro/2025-02-23-2025-edition.md
@@ -227,7 +227,7 @@ Memory fault (core dumped)
 
 <p><strong>Note 2:</strong> QNX 8.0 was released to the general public in late 2023 or early 2024 so the actual target at the time when the question was asked was running either QNX 7.0 or QNX 7.1 (I do not recall which version)</p>
 
-<p>The behavior for AMD64 (x86_64) as noted requires more fiddling to trigger a crash which came to my surprise. A slightly more detailed version will be released shortly on my <a href="https://zakuarbor.github.io/blog/small-stack/">blog</a> 
+<p>The behavior for AMD64 (x86_64) as noted requires more fiddling to trigger a crash which came to my surprise. A slightly more detailed version will be released shortly on my <a href="https://zakuarbor.codeberg.page/blog/small-stack/">blog</a> 
 which will include a very brief reason as to why AMD64 doesn’t crash if nothing extra is added like a call to <code class="language-plaintext highlighter-rouge">puts</code>.</p>
 
 </div>
@@ -292,7 +292,7 @@ to the LinkedIn Community as well which was where I learned about it.
 For those who are not familiar with QNX, QNX is a properiety realtime operating system targetted for embedded systems and is installed in over 255 million vehicles.
 QNX has a great reputation for being reliable and safe embedded system to build software on top of due to its microarchitecture and compliance to many industrial and engineering design process
 which gives customers the ability to certify their software in safety critical systems more easily. What makes QNX appealing is a discussion on another time but for me, this is a good
-opportunity to fiddle around with the system. I was <a href="https://zakuarbor.github.io/blog/carletonu-qnx-license/">previously denied a license</a> from my university who had an agreement with QNX and
+opportunity to fiddle around with the system. I was <a href="https://zakuarbor.codeberg.page/blog/carletonu-qnx-license/">previously denied a license</a> from my university who had an agreement with QNX and
 my attempts to get an educational license did not go far years ago.</p>
 
 <p><img src="../assets/micro/products/qnx/announcement-linkedin.png" alt="LinkedIn Post announcing QNX 8.0 has a non-commercial license" /></p>
@@ -321,7 +321,7 @@ does a great job summarizing the sketpicism. QNX used to have a bigger hobbyist 
 to the community. Years later, QNX source code was available for the public to read (though probably with restrictions) but later shut the source code availability after being acquired by Blackberry who does not have the
 best reputation to the developer community (hence why Blackberry Phones failed to capture the market from my understanding despite once being a market leader).</p>
 
-<p>Regardless, I have plans to create a few materials on QNX in the coming months and perhaps create a follow up to <a href="https://zakuarbor.github.io/blog/qnx-aps/">QNX Adapative Partitioning System</a> as it seemed to have gained enough
+<p>Regardless, I have plans to create a few materials on QNX in the coming months and perhaps create a follow up to <a href="https://zakuarbor.codeberg.page/blog/qnx-aps/">QNX Adapative Partitioning System</a> as it seemed to have gained enough
 has been ranked top 5 on Google search results (though I doubt it had many readers due to the population of QNX developers):</p>
 
 <p><img src="../assets/micro/products/qnx/aps-search-results.png" alt="Google Search Result Ranking for my QNX APS webpage" /></p>
@@ -355,7 +355,7 @@ email and sign their messages so that I can verify the authenticity of the messa
 
 <p>Out of curiosity, I decided to see how one would manually verify the signature of an email to ensure that the email has not been tampered with 
 and comes from the person who it claims to be. I won’t go into how digital signatures work as those details will be posted shortly after at 
-my <a href="https://zakuarbor.github.io/blog/signature-verification/">blog</a>.</p>
+my <a href="https://zakuarbor.codeberg.page/blog/signature-verification/">blog</a>.</p>
 
 <ol>
   <li>Import Alice’s public key:
@@ -470,7 +470,7 @@ gpg:               imported: 1
 </ol>
 
 <p>In practice, no one verifies the digital signatures of emails manually. Any sane individual will utilize any email client that would automate the verification process for 
-them. This was a quick preview of a <a href="https://zakuarbor.github.io/blog/signature-verification/">blog post</a> I will be writing in the next few days that will go into email signatures in more details 
+them. This was a quick preview of a <a href="https://zakuarbor.codeberg.page/blog/signature-verification/">blog post</a> I will be writing in the next few days that will go into email signatures in more details 
 with better explanations and diagrams.</p>
 
 </div>
@@ -506,7 +506,7 @@ I do believe this depends on
 the encoding used. For me, the most obvious distinction between half and full width characters is how much graphical space it consumes as 
 evident from both the image above and below:</p>
 
-<p><img src="https://zakuarbor.github.io/blog../assets/micro/programming/encoding/full-half-width.png" alt="Full and Half Width Characters encoded on UTF-8" /></p>
+<p><img src="https://zakuarbor.codeberg.page/blog../assets/micro/programming/encoding/full-half-width.png" alt="Full and Half Width Characters encoded on UTF-8" /></p>
 <p class="caption">Full and Half Width encoded on UTF-8 as seen through Vim</p>
 
 <p>While I have read and typed Korean during my younger years when I was forced to learn Korean, it never clicked to me how much space Korean 
@@ -536,7 +536,7 @@ chinese-1.md,3
 
 <p><strong>Note:</strong> Do not attempt to display UTF-16 encoded files on the terminal without changing your locale (or whatever it is called). It will not display nicely. Vim on my machine will automatically open the file as UTF-16LE.</p>
 
-<p><img src="https://zakuarbor.github.io/blog../assets/micro/programming/encoding/chinese-garbage.png" alt="My default terminal settings is unable to display the content in Chinese properly" /></p>
+<p><img src="https://zakuarbor.codeberg.page/blog../assets/micro/programming/encoding/chinese-garbage.png" alt="My default terminal settings is unable to display the content in Chinese properly" /></p>
 
 <p>Let’s inspect the contents of the files between Half character <code class="language-plaintext highlighter-rouge">1</code> and Full Byte Character <code class="language-plaintext highlighter-rouge">１</code> in HEX:</p>
 <pre class="highlight" style="background-color: #1b1b1b; padding: .5rem; line-height: 1.25em"><font color="#D0CFCC"><b>$ </b></font>cat halfwidth-1.txt; echo &quot;&quot;; xxd halfwidth-1.txt; cat fullwidth-1.txt ; echo &quot;&quot;; xxd fullwidth-1.txt 
@@ -561,7 +561,7 @@ digit <code class="language-plaintext highlighter-rouge">１</code> is represent
 <p>As expected, UTF-16 represents code points in the upper range very well where we now see <code class="language-plaintext highlighter-rouge">１</code> (full-width 1) being represented with only 2 bytes unlike the 3 that was required in UTF-8. 
 Though the same cannot be said for code points in the lower range such as our half-width digit 	<code class="language-plaintext highlighter-rouge">1</code> which now takes 2 bytes by appending <code class="language-plaintext highlighter-rouge">0x00</code> to its hex representation.</p>
 
-<p>I will be writing a more detailed look into encoding at my <a href="https://zakuarbor.github.io/blog/halfwidth-fullwidth-encoding/">blog</a> in the coming days. This is just a quick preview.</p>
+<p>I will be writing a more detailed look into encoding at my <a href="https://zakuarbor.codeberg.page/blog/halfwidth-fullwidth-encoding/">blog</a> in the coming days. This is just a quick preview.</p>
 
 </div>
 
@@ -995,7 +995,7 @@ IBM made a huge mistake in open sourcing the POWER architecture too late. But on
 </div>
 <p><b>Website</b><br /></p>
 <p>
-In the past year I have been very lazy as evident with my <a href="https://zakuarbor.github.io/blog/" alt="Personal Blog">lack of activity on my personal blog</a>.
+In the past year I have been very lazy as evident with my <a href="https://zakuarbor.codeberg.page/blog/" alt="Personal Blog">lack of activity on my personal blog</a>.
 I'm now trying to pick up blogging again. It's hard to believe that it's been almost an entire year since I created this neocity site, which has almost 0 updates since. 
 I've been thinking about how to use this site since I already have a blog on GitHub Pages. Honestly, I forgot this corner existed, and it’s been bothering me that I couldn’t write my random, nonsensical thoughts because my main blog wouldn’t be a suitable medium until now.
 So, I’ve decided that this corner will be a microblog where I can share random articles and thoughts. A microblog is different from a regular blog in that the content is much shorter. This space will allow me to quickly jot down something random. I hope that a collection of these random posts will evolve into a blog post or spark an idea for my final year thesis or project.
