--- a/_posts/programming/2025-02-11-this-asm.md
+++ b/_posts/programming/2025-02-11-this-asm.md
@@ -2,7 +2,7 @@
 layout: post
 title: "this: the implicit parameter in OOP"
 description: A brief look into `this` parameter in OOP via assembly
-categories: [programming, asm, C/C++]
+categories: [programming, asm, c/c++]
 ---
 
 I was recently reminded that the variable `this` is an implicit parameter passed to all methods in OOP such as C++. We can observe this by comparing a regular function vs a method 
